Heroku deployment test 2

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://Rustamxon7.github.io/Math-Magicians",
+  "homepage": "https://math-magicans.herokuapp.com/",
   "name": "math-magicians-react",
   "version": "0.1.0",
   "private": true,
