--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "math-magicians-react",
   "version": "0.1.0",
+  "engines": {
+    "node": "16.4.2"
+  },
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
