Install missing element

--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/user-event": "^12.1.10",
     "big.js": "^6.1.1",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-markdown": "^2.2.1",
     "gh-pages": "^3.2.3",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
